# fournex

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package-lock.json  package.json  start-database.sh
.claude/: settings.local.json
backend/native/: CMakeLists.txt
backend/native/include/: clock.h  cupti_tracer.h  event_buffer.h  event_schema.h  nvml_sampler.h  telemetry_engine.h  writer.h
backend/native/src/: bindings.cpp  clock.cpp  cupti_tracer.cpp  event_buffer.cpp  nvml_sampler.cpp  telemetry_engine.cpp  writer.cpp
backend/python/: README.md  pyproject.toml  setup.py
backend/python/autopilot_telemetry/: __init__.py  _native.py  analysis.py  cli.py  common_ir_analysis.py  dataloader.py  profiler.py  sdk.py  storage.py
backend/python/autopilot_telemetry.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
backend/python/autopilot_telemetry/autopilot/: __init__.py  actions.py  comparison.py  guards.py  report.py  runner.py  safety.py
backend/python/autopilot_telemetry/autopilot/tuners/: __init__.py  batch_size.py  dataloader.py  memory.py
backend/python/autopilot_telemetry/recommendations/: catalog.yaml  engine.py
backend/python/fournex/: __init__.py  _native.py  analysis.py  arch_profiles.py  bench.py  case_study.py  cli.py  common_ir.py  common_ir_analysis.py  common_ir_validators.py  comparison.py  cuda_static.py  cuda_timers.py  data_pipeline_ir.py  distributed_ir.py  eval_sakana.py  explain.py  framework_abstraction_tax.py  kernel_attribution.py  kernel_inspector.py  ncu_analysis.py  ncu_comparison.py  ncu_presets.py  nvml_ir.py  occupancy_analysis.py  profiler.py  ptx_analysis.py  pytorch_profiler_ir.py  reconciliation.py  roofline.py  sakana_ncu_adapter.py  sdk.py  shapes.py  step_context.py  storage.py  tc_analysis.py  thresholds.py  variant_comparison.py
backend/python/fournex/autopilot/: benchmark.py  guards.py  local_executor.py  quality.py  report.py  runner.py
backend/python/fournex/autopilot/tuners/: __init__.py  mixed_precision.py  runtime.py
backend/python/fournex/cuda_rules/: __init__.py  engine.py
backend/python/fournex/cuda_rules/control_flow/: bounds_check_inside_hot_loop.yaml  excessive_branching.yaml  missing_obvious_bounds_guard.yaml  no_thread_indexing_detected.yaml  warp_divergence.yaml
backend/python/fournex/cuda_rules/launch/: low_theoretical_occupancy.yaml  poor_block_size_subwarp.yaml  poor_block_size_unaligned.yaml
backend/python/fournex/cuda_rules/memory/: missing_vectorized_loads.yaml  no_shared_memory_tiling.yaml  uncoalesced_access.yaml
backend/python/fournex/data/: __init__.py  frx_bench_harness.cuh
backend/python/fournex/recommendations/: __init__.py  catalog.yaml  engine.py  rules.yaml  signals.py
backend/python/runs/run-4f01ae7963af/: gpu_metrics.csv  manifest.json  metadata.json  run_config.yaml
backend/python/runs/run-66a2694cb57e/: gpu_metrics.csv  metadata.json  run_config.yaml
backend/python/runs/run-d80b4615b78e/: manifest.json  metadata.json  run_config.yaml  workload_run_config.yaml
(+206 files in other folders)
