[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fournex"
version = "0.1.0"
description = "Open-source GPU performance profiler and bottleneck analyzer for PyTorch."
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6.0",
]

[project.scripts]
frx = "fournex.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools]
include-package-data = true
